[timeline] vbug fixed: vertical lines no longer collapsing automatically, styling bug fixes to timeline

--- a/src/css/beat_block.scss
+++ b/src/css/beat_block.scss
@@ -241,7 +241,7 @@ $medium_width: 80px;
   transition: all 0.4s $cubic;
   font-size: 16px;
   cursor: pointer;
-  margin:-25px 0 0 0;
+  margin:-6px 0 0 0;
   &:first-child {
     margin: 0px 10px 0px 40px;
   }
